k8s/4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: automation-ingress
  namespace: skaffold
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
spec:
  rules:
    - host: "automation.k8s-taint.skaffold"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: automation-server-svc
                port:
                  number: 8888
